# nextchord

./: .dockerignore  .env.example  .gitattributes  .gitignore  Dockerfile  HANDOVER.md  NextChord_Colab_Backend.ipynb  NextChord一括起動.bat  README.md  RULES.md  _run_backend.cmd  _run_frontend.cmd  pyproject.toml  requirements.txt  start.bat  start.bat - ショートカット.lnk  start_servers.py  stop.bat
BTC-ISMIR19/: audio_dataset.py
evaluation/: analyze_combined.py  analyze_duration.py  analyze_report.py  beatles_report.json  beatles_report_enhanced.json  beatles_report_pitch.json  diatonic_filter.py  ensemble_ft_results.json  ensemble_logit_results.json  error_analysis.py  eval_enharmonic.py  eval_logit_ensemble.py  eval_madmom.py  eval_postprocess_v2.py  eval_source_sep.py  eval_tta.py  evaluate.py  evaluate_beatles.py  evaluate_chordmini.py  evaluate_demucs.py  evaluate_demucs_ft.py  evaluate_enhanced.py  evaluate_ensemble.py  evaluate_ft_ensemble.py  evaluate_guitarset.py  evaluate_postprocess.py  evaluate_rwc.py  evaluate_true_ensemble.py  evaluate_uspop.py  extract_features.py  final_summary.py  finetune_chordmini_beatles.py  fix_bad_tracks.py  fix_uspop_bad_tracks.py  generate_scraper.py  generate_synthetic_chords.py  generate_synthetic_v2.py  guitarset_report.json  optimization_results.json  optimize_inference.py  (+12 more)
fastapi-backend/: btc_engine.py  chord_analyzer.py  chord_hmm.py  chord_processing.py  chord_synth.py  chord_test.html  chord_transition_matrix.npz  chord_verifier.py  chordmini_engine.py  chordpro_converter.py  chroma_chord_engine.py  ensemble_engine.py  main.py  (+36 more)
(+780 files in other folders)
